--- a/frontend/src/components/SideNavbar.css
+++ b/frontend/src/components/SideNavbar.css
@@ -2,7 +2,7 @@
 .sidebar {
   height: 100%;
   width: 250px;
-  background-color: #ff69b4;
+  background-color:#fce4ec ;
   position: fixed;
   top: 0;
   left: 0;
@@ -16,7 +16,7 @@
 
 .sidebar-header {
   font-size: 1.5em;
-  color: white;
+  color:  #ff69b4;
   margin-bottom: 20px;
   text-align: center;
 }
@@ -29,7 +29,7 @@
   display: flex;
   align-items: center;
   padding: 15px;
-  color: white;
+  color: #ff69b4;
   font-size: 1.2em;
   cursor: pointer;
   transition: background-color 0.3s, transform 0.2s, box-shadow 0.2s;
@@ -39,7 +39,7 @@
 }
 
 .sidebar-item:hover {
-  background-color: #ff1493;
+  background-color: #fbfafb;
   transform: scale(1.05);
   box-shadow: 0 6px 8px rgba(0, 0, 0, 0.2);
 }
